@@ -2,60 +2,74 @@ package com.daily.my_dairy.security;
 
 import com.daily.my_dairy.Repository.UserRepository;
 import com.nimbusds.jose.JOSEException;
-import com.nimbusds.jose.jwk.JWKSet;
-import com.nimbusds.jose.jwk.RSAKey;
+import com.nimbusds.jose.jwk.*;
 import com.nimbusds.jose.jwk.source.JWKSource;
 import com.nimbusds.jose.proc.SecurityContext;
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.context.annotation.*;
+import org.springframework.security.authentication.*;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.*;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.oauth2.jwt.*;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.cors.*;
 
-import java.security.KeyPair;
-import java.security.KeyPairGenerator;
+import java.security.*;
 import java.security.interfaces.RSAPublicKey;
 import java.util.*;
 
 @Configuration
 public class JwtAuthSecurityConfiguration {
 
+  // Cache the RSA keypair once for the app lifecycle
+  private static final KeyPair STATIC_KEY_PAIR = generateRsaKey();
+  private static final RSAKey RSA_KEY = generateRsaJwk(STATIC_KEY_PAIR);
+
+  private static KeyPair generateRsaKey() {
+    try {
+      KeyPairGenerator generator = KeyPairGenerator.getInstance("RSA");
+      generator.initialize(2048);
+      return generator.generateKeyPair();
+    } catch (Exception e) {
+      throw new IllegalStateException("❌ Failed to generate RSA key pair", e);
+    }
+  }
+
+  private static RSAKey generateRsaJwk(KeyPair keyPair) {
+    return new RSAKey.Builder((RSAPublicKey) keyPair.getPublic())
+        .privateKey(keyPair.getPrivate())
+        .keyID("my-static-key-id") // Optional, static for stability
+        .build();
+  }
+
   @Bean
   public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
     http
         .csrf(csrf -> csrf.disable())
-        .sessionManagement(
-            session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
         .authorizeHttpRequests(auth -> auth
             .requestMatchers("/authenticate", "/register").permitAll()
             .anyRequest().authenticated()
         )
-        .oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()))
+        .oauth2ResourceServer(oauth -> oauth.jwt(Customizer.withDefaults()))
         .cors(cors -> cors.configurationSource(corsConfigurationSource()));
     return http.build();
   }
 
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(
-        List.of("http://localhost:5173", "https://storyvault.vercel.app"));
-    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    configuration.setAllowedHeaders(List.of("*"));
-    configuration.setAllowCredentials(true);
+    CorsConfiguration config = new CorsConfiguration();
+    config.setAllowedOrigins(List.of("http://localhost:5173", "https://storyvault.vercel.app"));
+    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+    config.setAllowedHeaders(List.of("*"));
+    config.setAllowCredentials(true);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", configuration);
+    source.registerCorsConfiguration("/**", config);
     return source;
   }
 
@@ -70,42 +84,23 @@ public class JwtAuthSecurityConfiguration {
   }
 
   @Bean
-  public KeyPair keyPair() {
-    try {
-      KeyPairGenerator keyPairGenerator = KeyPairGenerator.getInstance("RSA");
-      keyPairGenerator.initialize(2048);
-      return keyPairGenerator.generateKeyPair();
-    } catch (Exception e) {
-      throw new RuntimeException("Failed to generate key pair", e);
-    }
-  }
-
-  @Bean
-  public RSAKey rsaKey(KeyPair keyPair) {
-    return new RSAKey.Builder((RSAPublicKey) keyPair.getPublic())
-        .privateKey(keyPair.getPrivate())
-        .keyID(UUID.randomUUID().toString())
-        .build();
-  }
-
-  @Bean
-  public JWKSource<SecurityContext> jwkSource(RSAKey rsaKey) {
-    JWKSet jwkSet = new JWKSet(rsaKey);
-    return (jwkSelector, context) -> jwkSelector.select(jwkSet);
-  }
-
-  @Bean
-  public JwtDecoder jwtDecoder(RSAKey rsaKey) throws JOSEException {
-    return NimbusJwtDecoder.withPublicKey(rsaKey.toRSAPublicKey()).build();
-  }
-
-  @Bean
   public DaoAuthenticationProvider authenticationProvider(UserDetailsService userDetailsService,
       BCryptPasswordEncoder passwordEncoder) {
     DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
     provider.setUserDetailsService(userDetailsService);
     provider.setPasswordEncoder(passwordEncoder);
     return provider;
+  }
+
+  @Bean
+  public JwtDecoder jwtDecoder() throws JOSEException {
+    return NimbusJwtDecoder.withPublicKey(RSA_KEY.toRSAPublicKey()).build();
+  }
+
+  @Bean
+  public JWKSource<SecurityContext> jwkSource() {
+    JWKSet jwkSet = new JWKSet(RSA_KEY);
+    return (selector, context) -> selector.select(jwkSet);
   }
 
   @Bean
